switch back to kotlinc

--- a/web/src/quickstart.html
+++ b/web/src/quickstart.html
@@ -318,7 +318,7 @@ smile>
                 In the home directory of Smile, type</p>
 
             <pre class="prettyprint lang-sh"><code>
-    $ bin/kotlin.sh
+    $ bin/kshell.sh
     </code></pre>
 
             <p>to enter the Kotlin REPL with Smile libraries in the class path.
@@ -328,7 +328,7 @@ smile>
                 option <code>-J-Xmx</code>. For example,</p>
 
             <pre class="prettyprint lang-sh"><code>
-    $ bin/kotlin.sh -J-Xmx30G
+    $ bin/kshell.sh -J-Xmx30G
     </code></pre>
 
             <h3 id="basics_kotlin">Basics</h3>
@@ -387,7 +387,7 @@ smile>
             <p>It can be run directly from the shell:</p>
 
             <pre class="prettyprint lang-sh"><code>
-    $ bin/kotlin.sh examples/iris.kts
+    $ bin/kshell.sh examples/iris.kts
     </code></pre>
 
             <p>In this example, we use Fisher's Iris data in the <code>data</code> directory
