call kotlinc instead of kotlinc-jvm

--- a/web/src/quickstart.html
+++ b/web/src/quickstart.html
@@ -387,7 +387,7 @@ smile>
             <p>It can be run directly from the shell:</p>
 
             <pre class="prettyprint lang-sh"><code>
-    $ bin/kshell.sh examples/iris.kts
+    $ bin/kshell.sh -Xuse-fir-lt=false -script examples/iris.kts
     </code></pre>
 
             <p>In this example, we use Fisher's Iris data in the <code>data</code> directory
