--- a/web/src/quickstart.html
+++ b/web/src/quickstart.html
@@ -335,7 +335,7 @@ smile>
 
             <p>When the shell starts, we should see something like the following:</p>
             <pre class="prettyprint lang-kotlin"><code>
-    Welcome to Kotlin version 1.3.70 (JRE 1.8.0_241-b07)
+    Welcome to Kotlin version 2.0.0 (JRE 21.0.3+7-LTS-152)
     Type :help for help, :quit for quit
     >>>
     </code></pre>
